<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/kontakt_title"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        android:textStyle="bold" />
    
        <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/blue_line"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ime" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/edit_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/telefon" />

    <EditText
        android:id="@+id/edit_tel_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/poraka" />

    <EditText
        android:id="@+id/edit_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="23dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:background="@drawable/btn_selector"
            android:text="@string/otkazi"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/box_selector"
            android:text="@string/isprati"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
</ScrollView>