<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/green_background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_launcher"
                android:gravity="center"
                android:text="@string/home_title"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/pol"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_male"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/checkbox_normal"
                android:gravity="right|center_vertical"
                android:paddingRight="6dp"
                android:text="@string/mashki"
                android:textColor="@color/dark_blue" />

            <CheckBox
                android:id="@+id/check_female"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/checkbox_normal"
                android:gravity="right|center_vertical"
                android:paddingRight="6dp"
                android:text="@string/zenski"
                android:textColor="@color/dark_blue" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/datum"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/box_selector"
            android:hint="@string/vnesi_datum"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/black" />
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/profesija"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_profession"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:prompt="@string/spinner_profession_text"
            android:spinnerMode="dialog" />
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:maxLines="2"
            android:text="@string/traenje"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_duration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/spinner"
            android:padding="10dp"
            android:prompt="@string/spinner_duration_text"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:text="@string/premija"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_premium"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:prompt="@string/spinner_premium_text"
            android:spinnerMode="dialog"
            android:background="@drawable/spinner"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_selector"
            android:text="@string/prebaraj"
            android:textColor="@drawable/text_color_selector"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>