<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/results_title"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

     <!--    <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:visibility="visible" />  --> 
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_background"
        android:layout_below="@id/linear1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/kompanija"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center|center_vertical"
                    android:text="@string/osigurena_suma"
                    android:textColor="@color/dark_blue"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/croatia_blue" />

                <TextView
                    android:id="@+id/croatia_textview"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:background="@color/dark_blue"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <ImageButton
                    android:id="@+id/contact_croatia"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/mail_btn_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/uniqa_blue" />

                <TextView
                    android:id="@+id/uniqa_textview"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:background="@color/dark_blue"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <ImageButton
                    android:id="@+id/contact_uniqa"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/mail_btn_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/winner_blue" />

                <TextView
                    android:id="@+id/winner_textview"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:background="@color/dark_blue"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <ImageButton
                    android:id="@+id/contact_winner"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/mail_btn_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/grawe_blue" />

                <TextView
                    android:id="@+id/grawe_textview"
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:background="@color/dark_blue"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <ImageButton
                    android:id="@+id/contact_grawe"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/mail_btn_selector" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/promeni_premija"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:padding="10dp"
                android:prompt="@string/spinner_premium_text"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/promeni_period"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/spinner"
                android:padding="10dp"
                android:prompt="@string/spinner_duration_text"
                android:spinnerMode="dialog" />

            <Button
                android:id="@+id/btn_result_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_selector"
                android:text="@string/prebaraj"
                android:textColor="@drawable/text_color_selector"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
    <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/linear1"
            android:layout_alignRight="@id/linear1"
            android:layout_alignParentTop="true"
            android:visibility="visible" /> 

</RelativeLayout>